# wsl-fs-notify

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: Detours.cmake  WSL.cmake  Windows.cmake
src/: config.h  handle.h  main-win.cc  main-wsl.cc  message.cc  message.h  pe.cc  pe.h  pipe.cc  pipe.h  utils.cc  utils.h
